Add documentation for editorial architecture, content inventory, publication strategy, and UI copy guidelines
- Introduced `arquitectura-editorial.md` detailing content types and navigation structure.
- Created `content-source-inventario.md` for inventory of source materials and their usage.
- Added `estrategia-publicacion.md` outlining publication strategies and editorial decisions.
- Developed `guia-voz-microcopy-ux.md` to define site voice and microcopy standards.
- Included `sistema-editorial-web.md` for guidelines on writing and editing texts on the site.
- Established `ui-copy-sheet.md` for ready-to-use interface texts and navigation elements.
- Updated `.gitignore` to exclude content source directory.
- Added `identidad-corporativa.md` for corporate identity and editorial system guidelines.
- Created `mapa-pantallas.md` to outline existing screens and views for implementation.
- Introduced `plataforma-autor-plan.md` detailing the author platform's operational principles and structure.
- Added `wordpress-content-model.md` to define content types and relationships.
- Included `sistema-editorial-web.md` for web-specific editorial guidelines.
- Updated `.gitignore` to exclude content source directory.
- Added `ui-copy-sheet.md` for interface text guidelines.
- Created `mapa-pantallas.md` to outline existing screens and views for implementation.

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,9 @@ wp-config.php
 # uncomment the next line
 #/wp-content/themes
 
+# Content source: reference material from author (heavy; use assets/ for site files)
+/content-source/
+
 # IDEs
 .vscode
 *.code-*
